# GarminDB

./: .gitignore  .gitmodules  FileProcessor.py  FitFileProcessor.py  GarminConnectConfig.json.example  GarminConnectConfig.py.orig  GarminConnectConfigManager.py  GarminConnectEnums.py  GarminDBConfig.py  GarminDBConfigManager.py  GarminJsonData.py  JsonFileProcessor.py  MANIFEST.in  Makefile  README.md  RestClient.py  activity_fit_file_processor.py  analyze.py  analyze_fitbit.py  analyze_garmin.py  analyze_mshealth.py  bugreport.sh  checkup.py  contributors.txt  copy_garmin.py  create_dbs.sh  defines.mk  dev-requirements.in  dev-requirements.txt  download_garmin.py  export_activities.py  file_processor.py  fit_data.py  fit_file_processor.py  fitbit.py  flake.nix  garmin.py  garmin_connect_config_manager.py  garmin_connect_enums.py  garmin_db_config.py  (+29 more)
FitBitDB/: FitBitDB.py  __init__.py  fitbit_db.py
GarminDB/: ActivitiesDB.py  ExtraData.py  GarminDB.py  GarminSummaryDB.py  MonitoringDB.py  MonitoringSummaryDB.py  __init__.py  activities_db.py  extra_data.py  garmin_db.py  garmin_summary_db.py  monitoring_db.py
GarminSqlite/: DB.py  GarminDB.py  MonitoringDB.py  MonitoringSummaryDB.py  __init__.py
HealthDB/: CsvImporter.py  DB.py  DbVersionObject.py  DerivedEnum.py  KeyValueObject.py  Location.py  SummaryBase.py  SummaryDB.py  Utilities.py  __init__.py  csv_importer.py  db.py  db_version.py  de.py  derived_enum.py  key_value.py  keyvalue.py  location.py  summary_base.py  summary_db.py  utilities.py
Jupyter/: Activities_Dashboard.ipynb  __init__.py  activity.ipynb  (+18 more)
(+120 files in other folders)
