[project]
name = "GarminDb"
dynamic = ["version"]
description = "Garmin Connect download and analysis"
readme = "README.md"
license = {text = "GPL"}
requires-python = ">3.10"
authors = [
    {name = "Tom Goetz"},
]
keywords = ["garmin", "garmin connect"]
dependencies = [
    "SQLAlchemy==2.0.41",
    "garth>=0.5.17",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tcgoetz/GarminDB"
"Repository" = "https://github.com/tcgoetz/GarminDB"
"Issues" = "https://github.com/tcgoetz/GarminDB/issues"
"Changelog" = "https://github.com/tcgoetz/GarminDB/releases"

[dependency-groups]
dev = [
    "build",
    "flake8",
    "twine",
    "wheel",
]

[tool.setuptools.dynamic]
version = {attr = "garmindb.__version__"}

[tool.uv]
python = ">=3.11"

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"
